--- a/home/firstSteps/html/firstStepsPs.html
+++ b/home/firstSteps/html/firstStepsPs.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" type="text/css" href="../../global/css/footer.css" />
     <link rel="stylesheet" type="text/css" href="../../firstSteps/css/firstSteps.css" />
     <link rel="stylesheet" type="text/css" href="../../firstSteps/css/timeline.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -465,10 +466,10 @@
                                         <a href="https://www.youtube.com/watch?v=6rVxGUchwVY">Infinity</a>
                                     </li>
                                     <br />
-                                    <p class="timeline-content-date">Before you progress</p>
+                                    <p class="timeline-content-date">Consider before progressing!</p>
                                     <hr>
-                                    <p class="trickinfo">Learn all Fundamentals in all <a href="">Slots</a></p>
-                                    <p class="trickinfo">Learn Sonic, Fingerpass & Charge in <a href="">Palm Up, Palm
+                                    <p class="trickinfo">Learn all Fundamentals in all <a href="firstStepsPs.html#notationWrapper">Slots</a></p>
+                                    <p class="trickinfo">Learn Sonic, Fingerpass & Charge in <a href="firstStepsPs.html#notationWrapper">Palm Up, Palm
                                             Down and Palm Side</a></p>
 
                                 </ul>
@@ -509,10 +510,10 @@
                                         <li class="trick"><a href="https://www.youtube.com/watch?v=XOeo4VsdWAA">Inverse
                                                 Twisted Sonic</a></li>
                                         <br />
-                                        <p class="timeline-content-date">Before you progress</h2>
+                                        <p class="timeline-content-date">Consider before progressing!</h2>
                                             <hr>
-                                            <p class="trickinfo">Learn all Fundamentals in <a href="">Reverse</a></p>
-                                            <p class="trickinfo">Learn <a href="">Wipers</a> in all Slots and Reverse
+                                            <p class="trickinfo">Learn all Fundamentals in <a href="firstStepsPs.html#notationWrapper">Reverse</a></p>
+                                            <p class="trickinfo">Learn <a href="firstStepsPs.html#notationWrapper">Wipers</a> in all Slots and Reverse
                                             </p>
                             </div>
                         </div>
@@ -553,7 +554,7 @@
                                                 Sonic</a></li>
 
                                         <br />
-                                        <p class="timeline-content-date">Before you progress</h2>
+                                        <p class="timeline-content-date">Consider before progressing!</h2>
                                             <hr>
                                             <p class="trickinfo">Learn all Basics in Reverse</p>
                             </div>
@@ -588,7 +589,7 @@
 
 
                                         <br />
-                                        <p class="timeline-content-date">Before you progress</h2>
+                                        <p class="timeline-content-date">Consider before progressing!</h2>
                                             <hr>
                                             <p class="trickinfo">Learn all Intermediate in Reverse</a></p>
                                             <p class="trickinfo">Learn all Twisted Sonic variations in all Slots
@@ -639,17 +640,6 @@
 <i class="fa fa-bars"></i> -->
 
 
-            <!-- import footer -->
-            <div id="footer">
-
-            </div>
-
-            <script>
-                $(function () {
-                    $("#footer").load("../../global/fragments/footer.html");
-                });
-            </script>
-            <!-- end import footer -->
 </body>
 
 </html>
@@ -669,6 +659,8 @@
 <script type="text/javascript"></script>
 
 <!-- import footer -->
+</div>
+</div>
 <div id="footer">
 
 </div>
@@ -679,8 +671,8 @@
     });
 </script>
 <!-- end import footer -->
-</div>
-</div>
+
+
 </div>
 
 
