--- a/home/penModding/html/penmods.html
+++ b/home/penModding/html/penmods.html
@@ -33,15 +33,11 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="../../mdb/css/mdb.min.css">
   <!-- Your custom styles (optional) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <link rel="stylesheet" type="text/css" href="../../mdb/css/test.css" />
   <link rel="stylesheet" type="text/css" href="../../global/css/footer.css" />
   <link rel="stylesheet" type="text/css" href="../css/penmodding.css" />
-
-
-
-
-
-
 </head>
 
 <body onload="createCards()">
