--- a/home/trickTutorials/html/trickTutorials.html
+++ b/home/trickTutorials/html/trickTutorials.html
@@ -53,6 +53,8 @@
     <script src="../js/allTricks.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/tree.css" />
     <link rel="stylesheet" type="text/css" href="../css/allTricks.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 
@@ -175,8 +177,9 @@
                     <li class="lead">
                         <p id="underline">Only once you learned a trick in all slots, reverse, palm down/palm normal
                             (if possible), you have mastered it. <br />
-                            <u id="underline">Learning tricks in reverse and in all slots is VERY important!!! If you only learn the Trick in one slot, you will have problems making combos!
-                            Try to learn every trick in all slots and in all slots reverse!</u></p>
+                            <u id="underline">Learning tricks in reverse and in all slots is VERY important!!! If you
+                                only learn the Trick in one slot, you will have problems making combos!
+                                Try to learn every trick in all slots and in all slots reverse!</u></p>
                     </li>
                     <li class="lead">
                         <p>For example: You just learned "Sonic 23-12": now try to learn "Sonic reverse
