--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Penmodding</title>
+  <title>Home</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
 
@@ -242,9 +242,9 @@
 
     <div class="row padding">
       <div class="col-lg-6" id="bdWrapper">
-        <div class="row">
+        <div class="row" >
 
-          <div>
+          <div class="legend-div">
             <p><u>Legend</u></p>
             <ul>
               <li> ">" - Next trick</li>
