--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <a href="./home/firstSteps/html/firstStepsPs.html" class="cardlink">
           <div class="card"> <img class="card-img-top" src="./home/global/img/palmspin.png" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title">First Steps</h4>
+              <h4 class="card-title navlink">First Steps</h4>
             </div>
           </div>
         </a>
@@ -189,7 +189,7 @@
         <a href="./home/trickTutorials/html/trickTutorials.html" class="cardlink">
           <div class="card"> <img class="card-img-top" src="./home/global/img/twoMx.png" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title">Trick Tutorials</h4>
+              <h4 class="card-title navlink">Trick Tutorials</h4>
             </div>
           </div>
         </a>
@@ -199,7 +199,7 @@
         <a href="./home/penModding/html/penmods.html" class="cardlink">
           <div class="card"> <img class="card-img-top" src="./home/global/img/oneMx.jpg" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title">Penmodding</h4>
+              <h4 class="card-title navlink">Penmodding</h4>
             </div>
           </div>
         </a>
